# diplomarbeit

./: .gitignore  Makefile  README  README.md  anwendung.tex  apnoe.tex  attreinb.tex  ausblick.tex  auswertung.tex  corrdim.tex  einleitung.tex  gliederung.tex  killps.cc  masse.tex  medfach.tex  number  parameter.tex  runxdvi  schluss.tex  settexvars  setup_code.sh  setup_daten.sh  surrogat.tex  svd.tex  theorie.tex  titel.tex
.github/workflows/: build_code.yml  build_doc.yml  makefile.yml
bib/: buzug.bib  grassberger.bib  kennel.bib  liebert.bib  lorenz.bib  mandel.bib  ott.bib  pawelzik.bib  takens.bib  theiler.bib  tsa.bib  tsa2.bib  yorke.bib
bst/: myalpha.bst  mysiam.bst
code/: CMakeLists.txt  Makefile  Makefile.inc  ToDo
code/alg/: Autocorr.cc  Autocorr.h  CMakeLists.txt  Corrdim.cc  Corrdim.h  Corrint.cc  Corrint.h  Corrslp.cc  Corrslp.h  Create.cc  Create.h  Cuts.cc  Cuts.h  Discrete.cc  Discrete.h  Evl.cc  Evl.h  Filter.cc  Filter.h  Fourier.cc  Fourier.h  Fuell.cc  Fuell.h  Histo.cc  Histo.h  Linear.cc  Linear.h  Ma.cc  Ma.h  Makefile  Makets.cc  Makets.h  Median.cc  Median.h  Mutual.cc  Mutual.h  Neural.cc  Neural.h  Noise.cc  Noise.h  (+22 more)
code/clm/: CMakeLists.txt  Makefile  autocorr.cc  corrdim.cc  corrint.cc  corrslp.cc  create.cc  cuts.cc  discrete.cc  evl.cc  filter.cc  fourier.cc  fuell.cc  fuelld.cc  histo.cc  linear.cc  ma.cc  makets.cc  median.cc  mutual.cc  neural.cc  noise.cc  packdim.cc  poinc.cc  rects.cc  recurr.cc  stat.cc  subtrend.cc  surrogate.cc  svd.cc  svdrec.cc  takdim.cc  takslp.cc  voss.cc
code/minilibg++/: CMakeLists.txt  String.cc  String.h  _G_config.h  fstream.h  iomanip.h  iostream.h  new.h  std.h
code/nr/: .depend  CMakeLists.txt  Makefile
code/nr/include/: _nr.h  matrixtempl.h  nr.h  nrutil.h  oldvecmat.h  vectortempl.h
code/nr/src/: determ.cc  fit.cc  four1.cc  fourn.cc  gammln.cc  gammq.c  gcf.c  gser.cc  ludcmp.cc  nr.cc  nrutil.cc  realft.c  tqli.cc  tred2.cc
code/others/: .depend  Makefile  lower.cc  psm.cc  testfloat.cc  uplow.cc  upper.cc
code/scripts/: gp2eps  gpfix  prepdir  remake
code/util/: .depend  CMakeLists.txt  ExtFile.cc  ExtFile.h  ExtGetOpt.cc  ExtGetOpt.h  Functions.cc  Functions.h  General.cc  General.h  Gpfile.cc  Gpfile.h  Makefile  Runge.cc  Runge.h  Statistical.cc  Statistical.h  Vector.cc  Vector.h
data/anwend/filterma/: tsma_m_2.inf  tsma_ma_2.inf  tsma_p_1.inf  tsma_p_2.inf  tsma_p_3.inf  tsma_p_4.inf  tsma_p_5.inf  tsma_p_8.inf  tsma_p_9.inf  tsma_p_a.inf  tsma_p_b.inf  tsma_r_2.inf  tsma_r_6.inf  tsma_r_7.inf  tsma_r_8.inf  tsma_ra_1.inf  tsma_ra_2.inf
data/anwend/filtersvd/: createcmd  svd_m_1.inf  svd_m_2.inf  svd_ma_1.inf  svd_ma_2.inf  svd_p_1.inf  svd_p_4.inf  svd_p_5.inf  svd_p_6.inf  svd_p_7.inf  svd_p_8.inf  svd_p_9.inf  svd_p_a.inf  svd_p_b.inf  svd_r_1.inf  svd_r_4.inf  svd_r_6.inf  svd_r_8.inf  svd_ra_2.inf  tssf_m_1.inf  tssf_m_2.inf  tssf_ma_1.inf  tssf_ma_2.inf  tssf_p_1.inf  tssf_p_2.inf  tssf_p_3.inf  tssf_p_4.inf  tssf_p_5.inf  tssf_p_6.inf  tssf_p_7.inf  tssf_p_a.inf  tssf_p_b.inf  tssf_r_2.inf  tssf_r_4.inf  tssf_r_5.inf  tssf_r_7.inf  tssf_ra_1.inf
data/anwend/filtersvd2/: svd_m_1.inf  svd_ma_1.inf  svd_p_2.inf  svd_p_3.inf  svd_p_4.inf  svd_p_6.inf  svd_p_7.inf  svd_p_8.inf  svd_p_9.inf  svd_p_a.inf  svd_p_b.inf  svd_r_2.inf  (+24 more)
data/attraktoren/: fournew.gp  lornew.gp
data/autocorr/: lorac.gp.mod  lorac.inf  lorenz.inf  lorrec2.inf  lorts.inf  roeac.gp.mod  roeac.inf  roerec.inf  roerec2.gp.mod
data/density/: density1.gp.mod  density1.inf  density2.inf  density3.gp.mod  density3.inf  lorts.inf
data/noise/: filac.inf  filcdim.inf  filcint.inf  filcslp.inf  filter.inf  fourier.inf
data/recurrence/: fourier.inf  lorac.inf  lorenz.inf  lorrct.inf  lorrec.inf  lorrec2.inf  lorts.inf  roerec.inf  roerec2.inf  roessler.inf  timeseries.inf
data/redundancy/: bla.inf  fourier.inf  histo.inf  histo1.inf  histo2.inf  histo2b.gp  histo2n.gp  histoc.gp  lorenz.inf  lorrec2.inf  roerec2.inf  roets.inf
data/rekonstruktion/: autocorr.inf  recnew.gp  rects.inf  roefour.inf  roenew.gp  roessler.inf  timeseries.inf
data/svd/: lorenz.inf
data/zeit/: rectshigh.gp.mod  rectshigh.inf  rectslow.inf  rectsmed.gp.mod  roessler.inf  timeseries.inf
doc/: Makefile  anwendung.tex  apnoe.tex  attreinb.tex  auswertung.tex  bildchen.tex  corrdim.tex  einleitung.tex  extrabib.tex  gliederung.tex  latexmkrc  log_indent.py  masse.tex  medfach.tex  parameter.tex  schluss.tex  surrogat.tex  svd.tex  theorie.tex  titel.tex  unterschrift.tex
doc/bib/: tsa.bib
doc/postscript/: bla.eps
doc/style/: elmar.sty  fail_if_luatex.sty  psno.sty  psyes.sty
postscript/: dummy.eps  prepall
postscript/attraktoren/: fourier.inf  fournew.eps  fournew.gp  lornew.eps  lornew.gp
postscript/autocorr/: lorac.eps  lorac.gp.mod  lorrec.gp.mod  lorrec.inf  lorrec2.eps  lorrec2.gp.mod  roeac.eps  roeac.gp.mod  roerec2.eps  roerec2.gp.mod  roerec2.inf  roets.inf
postscript/density/: density1.eps  density2.eps  density2.gp.mod  lorenz.inf
postscript/noise/: filfourier.inf  noise.inf  noise2.inf
postscript/packdim/: packdimb1.eps
postscript/recurrence/: autocorr.inf  loarcnew.gp  lorcmp.gp  roeac.gp  roecmp.gp  roerct.inf  roets.inf
postscript/redundancy/: autocorr.inf  histo2b.gp  histo2n.gp  histoc.gp  histoc2.gp  lormut.eps  lormut.inf  lorrec.inf  roemut.eps  roemut.inf  roerec.inf  roerec2.eps  roerecnew.gp  roessler.inf
postscript/rekonstruktion/: recnew.eps  roenew.eps  timenew.eps  timenew.gp
postscript/zeit/: rectshigh.eps  rectshigh.gp.mod  rectslow.eps  rectslow.gp.mod  rectsmed.gp.mod  rectsmed.inf
style/: elmar.sty  figmath.sty  psyesno.sty  trennungen.sty
voss/: aufgabe.txt  vosscode.c
(+1212 files in other folders)
