add_custom_target(clm)

macro(add_command cmd)
    add_executable(${cmd} "${cmd}.cc")
    target_compile_definitions(${cmd} PRIVATE "-DINTERFACE")
    target_link_libraries(${cmd} alg)
    add_dependencies(clm ${cmd})
endmacro()


add_command(autocorr)
add_command(corrdim)
add_command(corrint)
add_command(corrslp)
add_command(create)
add_command(cuts)
add_command(discrete)
add_command(evl)
add_command(filter)
add_command(fourier)
add_command(fuell)
add_command(fuelld)
add_command(histo)
add_command(linear)
add_command(ma)
add_command(makets)
add_command(median)
add_command(mutual)
add_command(neural)
add_command(noise)
add_command(packdim)
add_command(poinc)
add_command(rects)
add_command(recurr)
add_command(stat)
add_command(subtrend)
add_command(surrogate)
add_command(svd)
add_command(svdrec)
add_command(takdim)
add_command(takslp)
add_command(voss)

