add_custom_target(clm)

macro(add_tscommand cmd)
    add_executable(${cmd} "${cmd}.cc")
    target_compile_definitions(${cmd} PRIVATE "-DINTERFACE")
    target_link_libraries(${cmd} alg)
    add_dependencies(clm ${cmd})
    list(APPEND TSCOMMANDS ${cmd})
    set(TSCOMMANDS ${TSCOMMANDS} PARENT_SCOPE)
endmacro()

add_tscommand(autocorr)
add_tscommand(corrdim)
add_tscommand(corrint)
add_tscommand(corrslp)
add_tscommand(create)
add_tscommand(cuts)
add_tscommand(discrete)
add_tscommand(evl)
add_tscommand(filter)
add_tscommand(fourier)
add_tscommand(fuell)
add_tscommand(fuelld)
add_tscommand(histo)
add_tscommand(linear)
add_tscommand(ma)
add_tscommand(makets)
add_tscommand(median)
add_tscommand(mutual)
add_tscommand(neural)
add_tscommand(noise)
add_tscommand(packdim)
add_tscommand(poinc)
add_tscommand(rects)
add_tscommand(recurr)
add_tscommand(stat)
add_tscommand(subtrend)
add_tscommand(surrogate)
add_tscommand(svd)
add_tscommand(svdrec)
add_tscommand(takdim)
add_tscommand(takslp)
add_tscommand(voss)

